--- a/root/cover.css
+++ b/root/cover.css
@@ -8,6 +8,31 @@
   text-shadow: none; /* Prevent inheritance from `body` */
 }
 
+.header {
+  width: 100vw;
+  background-color: var(--dark-grey);
+  opacity: 1;
+}
+
+.header-top {
+  display: flex;
+  height: 100px;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.header-text {
+  font-size: 40px;
+  padding: 5px 10px;
+  border: 4px solid var(--off-white);
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
 
 /*
  * Base structure
@@ -68,7 +93,7 @@ h2 {
 .cover-container {
   height: 30em;
   justify-content: center;
-  background-image: url(images/cloudy_background.png);
+  background-image: url(../images/cloudy_background.png);
   background-size: cover;
 }
 
