--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
   * font credit: vistor.txt
   */
   font-family: 'Visitor';
-  src: url('../fonts/Visitor.woff2') format('woff2'),
-      url('../fonts/Visitor.woff') format('woff');
+  src: url('fonts/Visitor.woff2') format('woff2'),
+      url('fonts/Visitor.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -24,8 +24,8 @@
   font credit: Smoking Drum (http://www.smokingdrum.com.)
   
   font-family: 'Bulky Pixels';
-  src: url('fonts/BulkyPixels.woff2') format('woff2'),
-      url('fonts/BulkyPixels.woff') format('woff');
+  src: url('../fonts/BulkyPixels.woff2') format('woff2'),
+      url('../fonts/BulkyPixels.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
