--- a/docs/styles.css
+++ b/docs/styles.css
@@ -12,11 +12,11 @@
 
 :root {
   --off-white: rgb(235, 235, 235);
-  --dark-grey: rgb(100, 100, 100);
+  --dark-gray: rgb(80, 80, 80)
 }
 
 .bg-gray {
-  background-color: rgb(73, 73, 73);
+  background-color: var(--dark-gray);
 }
 
 /*@font-face {
