--- a/docs/cover.css
+++ b/docs/cover.css
@@ -8,7 +8,27 @@
   text-shadow: none; /* Prevent inheritance from `body` */
 }
 
+.text-white {
+  color: white;
+}
 
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.lead {
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.3;
+}
 
 .header {
   width: 100vw;
@@ -49,8 +69,9 @@ a, a:hover, a:focus, a:active {
 
 body {
   /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);*/
-  padding-top: 3rem;
-  font-family: 'Visitor'!important;
+  padding: 3rem 0 0 0;
+  margin: 0;
+  font-family: 'BB'!important;
   font-size: 20px;
 }
 
@@ -58,6 +79,10 @@ body {
   display: block;
   background-color: var(--dark-gray);
   padding: 20px 0px;
+}
+
+.my-row {
+  display: flex;
 }
 
 .my-row:after {
@@ -93,9 +118,12 @@ body {
  */
 
 .border-bar {
+  display: flex;
   height: 4em;
   background-color: rgb(50, 50, 50);
   justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 h2 {
@@ -134,8 +162,12 @@ h2 {
  */
 
 .cover-container {
+  display: flex;
+  margin: auto;
+  width: 100%;
   height: 30em;
   justify-content: center;
+  align-items: center;
   background-image: url(images/cloudy_background.png);
   background-size: cover;
 }
