--- a/docs/cover.css
+++ b/docs/cover.css
@@ -25,7 +25,7 @@
 }
 
 .lead {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-weight: 300;
   line-height: 1.3;
 }
@@ -83,6 +83,7 @@ body {
 
 .my-row {
   display: flex;
+  min-height: 17.5em;
 }
 
 .my-row:after {
@@ -95,6 +96,7 @@ body {
   float: left;
   padding: 0 40px;
   height: 100%;
+  min-height: inherit;
 }
 
 .col-left {
@@ -111,6 +113,10 @@ body {
 
 .col-wide {
   width: 60%;
+}
+
+.img {
+  vertical-align: middle;
 }
 
 /*
@@ -130,31 +136,6 @@ h2 {
   font-size: 40px;
   margin-top: 8px;
   margin-bottom: 8px;
-}
-
-/*
- * Header
- */
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
 }
 
 /*
@@ -182,25 +163,11 @@ h1 {
 }
 
 /*
- * Carousel
+ * About
  */
 
-.carousel {
-  margin-bottom: 4rem;
-}
-
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-}
-
-.carousel-item {
-  height: 32rem;
-}
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
+.about-slide {
+  width: 80%;
+  margin: auto;
+  padding: 0 0 10px 0;
 }
