--- a/docs/cover.css
+++ b/docs/cover.css
@@ -1,15 +1,43 @@
 @import './styles.css';
 
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+html {
+  scroll-behavior: smooth;
+}
+
+p::selection, h1::selection, h2::selection, a::selection, div::selection, h3::selection, b::selection {
+  background-color: rgb(252, 186, 3, 0.5);
+  color: var(--primary);
+}
+
+.logo {
+  width: 40px;
+  height: auto;
+}
+
+.dark-text {
+  color: var(--dark-text);
 }
 
 .text-white {
-  color: white;
+  color: var(--background);
+}
+
+.cover-text {
+  color: var(--primary);
+  max-width: 42em;
+}
+
+.text1 {
+  padding-left: 20px;
+  font-size: 30px;
+}
+
+.no-padding {
+  margin: 0;
+}
+
+.no-margin {
+  margin: 0;
 }
 
 .d-flex {
@@ -32,7 +60,7 @@
 
 .header {
   width: 100vw;
-  background-color: var(--dark-gray);
+  background-color: var(--background);
   opacity: 1;
 }
 
@@ -48,7 +76,7 @@
 .header-text {
   font-size: 40px;
   padding: 5px 10px;
-  border: 4px solid var(--off-white);
+  border: 4px solid var(--background);
 }
 
 a.anchor {
@@ -68,7 +96,6 @@ a, a:hover, a:focus, a:active {
  */
 
 body {
-  /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);*/
   padding: 3rem 0 0 0;
   margin: 0;
   font-family: 'BB'!important;
@@ -77,8 +104,9 @@ body {
 
 .base-container {
   display: block;
-  background-color: var(--dark-gray);
+  background-color: var(--background);
   padding: 20px 0px;
+  color: var(--dark-text);
 }
 
 .my-row {
@@ -94,29 +122,67 @@ body {
 
 .col {
   float: left;
-  padding: 0 40px;
+  padding: 20px 40px 20px 40px;
   height: 100%;
-  min-height: inherit;
+  min-height: 17.5em;
 }
 
 .col-left {
-  border-right: solid 5px rgb(50, 50, 50);
+  border-right: solid 5px var(--secondary);
 }
 
 .col-right {
-  border-left: solid 5px rgb(50, 50, 50);
+  border-left: solid 5px var(--secondary);
+}
+
+.col-sep::after {
+  content: "";
+  display: block;
+  width: 50%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-left: -40px;
+  border-bottom: 5px solid var(--secondary);
 }
 
 .col-skinny {
-  width: 40%;
+  width: 35%;
 }
 
 .col-wide {
-  width: 60%;
+  width: 65%;
+}
+
+.sticky {
+  position: sticky;
+  top: 17vh;
+}
+
+.m-auto {
+  margin: auto;
+}
+
+.img-info {
+  text-align: center;
+  justify-self: center;
+}
+
+.img-header::after {
+  width: 50%;
+  align-self: center;
+  height: 5px;
+  background-color: var(--primary);
+  border: solid 5px var(--primary);
+}
+
+.img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .img {
-  vertical-align: middle;
+  border: solid 0px var(--primary);
 }
 
 /*
@@ -126,16 +192,27 @@ body {
 .border-bar {
   display: flex;
   height: 4em;
-  background-color: rgb(50, 50, 50);
+  background-color: var(--primary);
   justify-content: center;
   align-items: center;
-  color: white;
+  color: var(--background);
+  z-index: 50;
+}
+
+h1 {
+  font-size: 84px;
 }
 
 h2 {
   font-size: 40px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+h3 {
+  font-size: 28px;
+  margin: 0;
+  padding-top: 4px;
 }
 
 /*
@@ -151,15 +228,14 @@ h2 {
   align-items: center;
   background-image: url(images/cloudy_background.png);
   background-size: cover;
+  z-index: 100;
 }
 
-.cover-text {
-  color: rgb(0, 0, 0);
-  max-width: 42em;
-}
-
-h1 {
-  font-size: 84px;
+.project-slide {
+  padding: 0;
+  width: 90%;
+  margin: auto;
+  background-color: var(--background);
 }
 
 /*
@@ -167,7 +243,89 @@ h1 {
  */
 
 .about-slide {
-  width: 80%;
+  width: 90%;
   margin: auto;
   padding: 0 0 10px 0;
+}
+
+#contact {
+  min-height: 15rem;
+}
+
+.contact-slide {
+  margin: auto;
+  width: 50%;
+}
+
+.contact-info {
+  display: flex;
+  margin: 10px 10px 30px 10px;
+  align-items: center;
+  color: var(--opaque-primary);
+}
+
+.contact-img {
+  display: flex;
+  min-width: 40px;
+  margin-right: 20px;
+  height: 40px;
+}
+
+.resume-link {
+  display: flex;
+}
+
+.contact-link {
+  color: var(--primary);
+  overflow: hidden;
+  background: linear-gradient(to right, var(--secondary), var(--secondary) 50%, var(--primary) 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: all ease-in-out .4s;
+}
+
+.contact-link:hover {
+  background-position: 0 100%;
+}
+
+/*
+ * Footer
+ */
+
+.my-footer {
+  background-color: var(--primary);
+  height: 100px;
+}
+
+.footer-text {
+  min-width: 15em;
+  display: block;
+  padding: 10px;
+  margin: 0;
+  text-align: center;
+}
+
+.rl-border {
+  border-right: solid 2px var(--background);
+  border-left: solid 2px var(--background);
+}
+
+.footer-email {
+  color: white;
+  overflow: hidden;
+  background: linear-gradient(to right, var(--secondary), var(--secondary) 50%, white 50%);
+  background-clip: text;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: all ease-in-out .4s;
+}
+
+.footer-email:hover {
+  background-position: 0 100%;
 }
