--- a/docs/my-nav.css
+++ b/docs/my-nav.css
@@ -1,6 +1,6 @@
 .my-navbar {
     height: 50px;
-    background-color: black;
+    background-color: var(--primary);
     padding: 15px 20px;
     align-items: center;
     align-content: center;
@@ -22,7 +22,14 @@
     min-width: 40px;
     margin-right: 20px;
     height: 40px;
-    background-color: white;
+    background: var(--background);
+    background: linear-gradient(to right, var(--secondary) 50%, var(--background) 50%) right;
+    background-size: 200%;
+    transition: all ease-in-out .4s;
+}
+
+.my-navbar-icon:hover {
+    background-position: left;
 }
 
 .my-nav-container {
@@ -40,17 +47,34 @@
     text-align: center;
 }
 
-.my-navlink:after {
-    transition: all ease-in-out .2s;
+.my-navlink {
+    color: white;
+    overflow: hidden;
+    background: linear-gradient(to right, var(--secondary), var(--secondary) 50%, white 50%);
+    background-clip: text;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: all ease-in-out .4s;
+}
+
+.my-navlink:hover {
+    background-position: 0 100%;
+}
+
+.u-line-anim:after {
+    transition: all ease-in-out .4s;
     margin-top: 2px;
-    background: none repeat scroll 0 0 white;
+    background: none repeat scroll 0 0 var(--secondary);
     content: "";
     display: block;
     height: 3px;
     width: 0;
 }
 
-.my-navlink:hover:after {
+.u-line-anim:hover:after {
     width: 100%;
 }
 
